@@ -44,3 +44,15 @@ type 'a always_int = int
 module F : functor (X : sig type t end) -> sig type s = X.t always_int end
 module M : sig type s = int end
 |}]
+
+module M = struct
+  module F (X : sig type t end) = X
+  module Not_ok = F (struct type t = private [< `A] end)
+end
+[%%expect{|
+module M :
+  sig
+    module F : functor (X : sig type t end) -> sig type t = X.t end
+    module Not_ok : sig type t end
+  end
+|}]
