@@ -555,6 +555,9 @@ OCaml 4.13.0
   (Damien Doligez, report by Stephen Dolan, review by Nicolás Ojeda Bär and
    Sadiq Jaffer)
 
+- #10454: Check row_more in nondep_type_rec.
+  (Leo White, review by Thomas Refis)
+
 OCaml 4.12.0 (24 February 2021)
 -------------------------------
 
